# MemoryManager

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
CWrapper/: CMakeLists.txt
CWrapper/Include/MemoryManager/: MemoryManager.h
CWrapper/Source/: MemoryManagerWrapper.cpp
Example/: CMakeLists.txt  Main.cpp
Example/C/: Heap.c  Stack.c
Example/CXX/: Main.cpp
Example/Source/: Main.cpp
Include/MemoryManager/: ExternalMemoryManager.hpp  LocalMemoryManager.hpp  MemoryManager.hpp
Modules/Linux/: CMakeLists.txt
Modules/Linux/Include/MemoryManager/: LinuxMemoryManager.hpp
Modules/Local/: CMakeLists.txt
Modules/Local/CWrapper/: CMakeLists.txt
Modules/Local/CWrapper/Include/MemoryManager/: LocalMemoryManager.h
Modules/Local/CWrapper/Source/: LocalMemoryManagerWrapper.cpp
Modules/Local/Include/MemoryManager/: LocalMemoryManager.hpp
Modules/Local/Source/: LocalMemoryManager.cpp
Source/: ExternalMemoryManager.cpp  Flags.cpp  LocalMemoryManager.cpp  MemoryLayout.cpp  MemoryManager.cpp  MemoryRegion.cpp  ProtectionFlags.cpp
Source/Cache/: CacheIterator.cpp  CacheRegion.cpp
